# 2021-Spring-Computer-Animation-and-Special-Effects

./: README.md
HW1/hw1/HW1/: imgui.ini
HW1/hw1/lib/: glfw3dll.exp  glfw3dll.lib
HW1/hw1/src/: cloth.cpp  integrator.cpp  sphere.cpp
HW2/hw2/: HW2.sln  README.md
HW2/hw2/HW2/: HW2.vcxproj  HW2.vcxproj.filters  imgui.ini
HW2/hw2/assets/: walk.amc
HW2/hw2/include/: bone.h  camera.h  configs.h  cylinder.h  hw2.h  icons.h  kinematics.h  posture.h  shader.h  skeleton.h  utils.h
HW2/hw2/lib/: glfw3dll.exp
HW2/hw2/src/: CMakeLists.txt  configs.cpp  cylinder.cpp  gui.cpp  kinematics.cpp  main.cpp  motion.cpp  posture.cpp  shader.cpp  skeleton.cpp  utils.cpp
HW3/hw3/: HW3.sln  README.md
HW3/hw3/HW3/: HW3.vcxproj  HW3.vcxproj.filters  imgui.ini
HW3/hw3/assets/: render.frag  render.vert
HW3/hw3/include/: bone.h  configs.h  hw3.h  kinematics.h  motion.h  posture.h  skeleton.h  sphere.h  utils.h
HW3/hw3/lib/: glfw3dll.exp
HW3/hw3/src/: CMakeLists.txt  camera.cpp  configs.cpp  gui.cpp  kinematics.cpp  main.cpp  motion.cpp  posture.cpp  skeleton.cpp  sphere.cpp  utils.cpp
project/: PPT.pptx  readme.md
